venndb-usage/tests/fails/lonely_any.rs
use venndb::VennDB;

#[derive(Debug, VennDB)]
struct Employee {
    #[venndb(any)]
    country: String,
}

fn main() {}
