venndb-usage/tests/fails/lonely_any.stderr
error: Invalid field-level `venndb` attribute
       `any` can only be used with `filter`
 --> tests/fails/lonely_any.rs:6:14
  |
6 |     country: String,
  |              ^^^^^^
